# llm-wiki

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  README.md  RELEASE_NOTES.md  launch.bat  launch.sh  pyproject.toml
docs/: ideas.md  implementationPlan_01.md  index.md  karpathy_alignment_review.md  karpathy_improvement_implementation_plan.md  karpathy_improvement_status_2026-05-14.md  llm-wiki-guide.docx  vector_db_implementation_guidelines.md
docs/fix/: 2026-04-16.md  2026-04-20.md  2026-05-14.md  2026-05-15-obsidian-sync.md  2026-05-15-remaining-phases.md  2026-05-15-vector-db.md  2026-05-15.md  2026-05-16-ingest-completion.md
docs/metrics/: karpathy_improvement_after_extraction_cache.md  karpathy_improvement_after_phase1.md  karpathy_improvement_after_remaining_phases.md  karpathy_improvement_after_structured_ingest.md  karpathy_improvement_baseline.md
docs/v0.1/: ARCHITECTURE.md  RELEASE_NOTES.md  design_ingest.md  ingest_improvement.md  instruction.md  interim_report.md  (+3 more)
report/: service_flow_review.md
tests/: conftest.py  test_config.py  test_documents_router.py  test_fs.py  test_language.py  test_lint.py  test_llm_runtime.py  test_metrics_and_drafts.py  test_progress.py  test_query.py  test_search_index.py  test_smoke.py  test_source_registry.py  test_structured_ingest.py  test_vector_index.py
wiki_cli/: drafts.py  fs.py  language.py  llm.py  main.py  metrics.py  obsidian_sync.py  search.py  search_index.py  source_registry.py  structured_ingest.py  vector_index.py
wiki_web/: __init__.py  __main__.py  app.py  config.py  progress.py  render.py
(+30 files in other folders)
