[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.3.1"
description = "LLM-maintained personal research wiki"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "click>=8.1",
    "python-frontmatter>=1.1",
    "rich>=13.0",
    "pypdf>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "jinja2>=3.1",
    "markdown>=3.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
bm25 = ["rank-bm25>=0.2"]
embedding = ["sentence-transformers>=2.7"]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
wiki = "wiki_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
